# Follower

./: .gitignore  .hgignore  README.md  readme-2.md  readme.md
Documents/: block_diagram.pptx
Documents/2015 tudengiprojekt/: 2015_projektikonkurssi_eelarve.xlsx
Documents/2015 tudengiprojekt/2015_projekti_aruandlus/: Kanded.xlsx
Hardware/BatteryManagementSystem/: BalancerQauge.SchDoc  BatteryManagementSystem.DsnWrk  BatteryManagementSystem.OutJob  BatteryManagementSystem.PcbDoc  BatteryManagementSystem.PrjPCB  BatteryManagementSystem.PrjPCBStructure  BatteryManagementSystem.SchDoc  BatteryManagementSystem.xlsx  Charger.SchDoc  LiPo Pack.SchDoc
Hardware/Body/: Aku.SLDPRT  Alus.SLDPRT  Eesratta plaat.SLDPRT  Eesratta polt.SLDPRT  Eesratta raam.SLDPRT  Enkoodriratas.SLDPRT  Esiratas.SLDASM  Esiratas.SLDPRT  Katus.SLDPRT  Kinnitusblokk.SLDPRT  Koos.SLDASM  Mootor.SLDPRT  Ratas.SLDPRT  Sisemine puks.SLDPRT  Siseplaat.SLDPRT  Suur hammasratas.SLDPRT  Telg.SLDPRT  Teljekinnitus.SLDPRT  Teljeklamber.SLDPRT  Ultraheli andur.SLDPRT  swxJRNL.swj
Hardware/URF Box/: URFBox.SLDPRT  URFBox.STL  URFBox.gcode
Software/: readme.md
Software/LowLevel/Common/: CANmessages.xml
Software/LowLevel/Documents/: Communication.docx  STM32_pinout.xlsx  bit time.xlsx
Software/LowLevel/MotorController/: .cproject  .project  MotorController.elf.launch  stm32_flash.ld
Software/LowLevel/RemoteStick/: .cproject  .project  stm32_flash.ld
Software/LowLevel/SensorBoard/: .cproject  .project  SensorBoard.elf.launch  stm32_flash.ld
Software/LowLevel/SensorBoardTest/: .cproject  .project  copy_src.bat
Software/LowLevel/SensorBoard_F4/: .cproject  .project  SensorBoard2.elf.launch
Software/LowLevel/VisionBoard/: .cproject  .project  VisionBoard.elf.launch
Software/LowLevel/VisionBoardTest/: .cproject  .project  copy_src.bat
Software/PC/Data/: Data.h  DataLayerBase.cpp  DataLayerCAN.cpp  DataLayerCAN.h  DataLayerConfig.cpp  DataLayerConfig.h  PacketConfig.cpp  PacketConfig.h  PacketHandler.cpp  PacketHandler.h  SpineCmd.cpp  SpineCmd.h  SpineData.cpp  SpineData.h  Typedef.h
Software/PC/FwdDecl/: DataLayerCAN_Fwd.h  SpineCmd_Fwd.h  SpineComm_Fwd.h  SpineData_Fwd.h
Software/PC/PC/: CANWorkerThread.cpp  CANWorkerThread.h  Follower.cpp  Follower.h  PC.vcxproj  PC.vcxproj.filters  Project_Includes.props  TRobot.cpp  TRobot.h  WorkerObjectBase.cpp  WorkerObjectBase.h  WorkerThread.cpp  WorkerThread.h  WorkerThreadBase.cpp  WorkerThreadBase.h  followerui.cpp  followerui.h  followerui.ui  main.cpp
Software/PC/Spine/: CSpineComm.h  SpineCmdCAN.cpp  SpineCmdCAN.h  SpineCommCAN.cpp  SpineCommCAN.h  SpineDataCAN.cpp  SpineDataCAN.h
Software/Remote/: FollowerRemote.sln  PC.sln
Software/Remote/Data/: DataLayerCAN.h  DataLayerConfig.cpp  DataLayerConfig.h  PacketHandler.cpp
Software/Remote/FollowerRemote/: Follower.cpp  Follower.h  FollowerRemote.vcxproj  FollowerRemote.vcxproj.filters  Kinematics.cpp  Kinematics.h  PC.vcxproj.filters  Project_Includes.props  TRobot.cpp  TRobot.h  WorkerObjectBase.cpp  WorkerObjectBase.h  WorkerObjectCAN.cpp  WorkerObjectCAN.h  WorkerThreadBase.cpp  WorkerThreadBase.h  chartdisplay.cpp  chartdisplay.h  chartdisplay.ui  configure.cpp  configure.h  configure.ui  follower.pro  followerui.cpp  followerui.h  followerui.ui  main.cpp
Software/Remote/PC/: CANWorkerThread.cpp  (+5 more)
Software/Tracker/: CMakeLists.txt  README.md
Software/Tracker/convnet/: bench.lua  depth_float.c  make_sets.lua  train.lua
Software/Tracker/modules/: FindSDL2.cmake  Findbgfx.cmake  Findbx.cmake  Findvpx.cmake
Software/Tracker/scripts/: conv_features.py  depth2sqlite.py
Software/Tracker/scripts/turning_sim/: index.html  sim.js
Software/Tracker/shaders/: fs.bin.h  fs_pos_tex_color.sc  varying.def.sc  vs.bin.h  vs_pos_tex_color.sc
Software/Tracker/src/: .main.cpp.swp  AABB.cpp  AABB.h  AsyncSerial.cpp  AsyncSerial.h  BlockDiff.cpp  BlockDiff.h  CMakeLists.txt  Client.cpp  Clock.h  ColorArea.cpp  ColorArea.h  Constants.h  Core.cpp  Core.h  CoreObj.h  CoreOptions.cpp  CoreOptions.h  Decode.cpp  Decode.h  Encode.cpp  Encode.h  File.cpp  File.h  FlMath.cpp  FlMath.h  HistogramDistance.cpp  HistogramDistance.h  Image.cpp  Image.h  IoVec.h  KinectFrame.cpp  KinectFrame.h  KinectFrameSource.h  KinectLiveFrameSource.cpp  KinectLiveFrameSource.h  KinectNullFrameSource.h  KinectSqliteFrameSource.cpp  KinectSqliteFrameSource.h  Message.h  (+81 more)
Software/Tracker/src/algorithm/: algorithm_move.cpp  algorithm_move.h  algorithm_runner.cpp  algorithm_runner.h  ialgorithm.h
Software/Tracker/src/classifier/: Classifier.h  FHDClassifier.cpp  FHDClassifier.h  TorchClassifier.cpp  TorchClassifier.h
Software/Tracker/src/comm/: DataLayerConfig.cpp  DataLayerConfig.h  InterfaceConfig.cpp  InterfaceConfig.h  PacketConfig.cpp  PacketConfig.h  comm_input.h  comm_output.h  datahandler.cpp  datahandler.h  datalayer.cpp  datalayer.h  datalayerconfig.cpp  datalayerconfig.h  icomm.h  interfaceconfig.cpp  interfaceconfig.h  interfacehandler.cpp  interfacehandler.h  packetconfig.cpp  packetconfig.h  serial_comm.cpp  serial_comm.h  serialcomm.cpp  serialcomm.h  typedef.cpp  typedef.h
Software/Tracker/src/filter/: kalman.cpp  kalman.h  particle_filter.cpp  particle_filter.h
Software/Tracker/src/hod/: candidate_db.cpp  candidate_db.h  edge.h  hod.cpp  hod.h  hod_candidate.h  hod_classifier.cpp  hod_classifier.h  hod_debug.cpp  hod_debug.h  hod_test.cpp  hod_train.cpp  image.cpp  image.h  segmentation.cpp  segmentation.h
Software/Tracker/src/imgui/: imgui.h  ocornut_imgui.cpp
Software/Tracker/src/imgui/ocornut-imgui/: .imgui_draw.cpp.swp  imgui_draw.cpp
Software/Tracker/src/interp/: cubic_hermite.cpp  cubic_hermite.h
Software/Tracker/src/nanovg/: fontstash.h  nanovg.h  nanovg_bgfx.cpp
Software/Tracker/src/proto/: frame.fbs  frame_generated.h  generate.sh  message.fbs  message_generated.h
Software/Tracker/src/scripts/: camera_track.lua  default.lua  default_pid.lua  pid.lua
Software/Tracker/src/ui/: Console.cpp  Console.h  cam_window.cpp  cam_window.h  main_window.cpp  main_window.h  ui_layout.cpp  ui_layout.h
(+265 files in other folders)
